Fixed footer height on mobile

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -430,7 +430,7 @@ footer {
 
   height: 170px;
   @media (max-width: 767px) {
-    height: 300px;
+    height: 450px;
   }
   margin-top: -266px;
 
